Add setting popup for api key

--- a/i18n/de.i18n.json
+++ b/i18n/de.i18n.json
@@ -54,6 +54,9 @@
     "all-boards": "Alle Boards",
     "and-n-other-card": "und eine andere Karte",
     "and-n-other-card_plural": "und __count__ andere Karten",
+    "api-key": "API-Key",
+    "api-key-delete": "Löschen",
+    "api-key-generate": "Neu generieren",
     "apply": "Übernehmen",
     "app-is-offline": "Die Anwendung ist derzeit offline. Aktualisieren der Seite führt zu Datenverlust.",
     "archive": "Archiv",
@@ -138,6 +141,7 @@
     "comment": "Kommentar",
     "comment-placeholder": "Kommentar schreiben",
     "computer": "Computer",
+    "configureApiKeyPopup-title": "API-Key Konfigurieren",
     "create": "Erstellen",
     "createBoardPopup-title": "Board erstellen",
     "createLabelPopup-title": "Label erstellen",
